oqct-app/main/default/objects/Record_Type_Field__c/Record_Type_Field__c.object-meta.xml
<CustomObject>
    <description>This object stores what fields need to masked under what record type</description>
    <label>DC-Record Type &amp; Field</label>
    <nameField>
        <displayFormat>RTF - {000000000}</displayFormat>
        <label>Record Type &amp; Field Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DC-Record Type &amp; Fields</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>