oqct-app/main/default/objects/Record_Type_Field__c/fields/DC_Configuration__c.field-meta.xml
<CustomField>
    <fullName>DC_Configuration__c</fullName>
    <description>The ‘DC-Configuration’ record associated with the ‘Record Type &amp; Field’ record</description>
    <inlineHelpText>The ‘DC-Configuration’ record associated with the ‘Record Type &amp; Field’ record</inlineHelpText>
    <label>DC-Configuration</label>
    <referenceTo>DC_Configuration__c</referenceTo>
    <relationshipName>Record_Types_Fields</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>