oqct-app/main/default/objects/Record_Type_Field__c/fields/Fields_to_Empty__c.field-meta.xml
<CustomField>
    <fullName>Fields_to_Empty__c</fullName>
    <description>The comma separated list of api names fields that needs to be emptied</description>
    <inlineHelpText>The comma separated list of api names fields that needs to be emptied</inlineHelpText>
    <label>Fields to Empty</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>