oqct-app/main/default/objects/Record_Type_Field__c/fields/Fields_To_Mask__c.field-meta.xml
<CustomField>
    <fullName>Fields_To_Mask__c</fullName>
    <description>The comma separated list of api names fields that needs to be masked</description>
    <inlineHelpText>The comma separated list of api names fields that needs to be masked</inlineHelpText>
    <label>Fields To Mask</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>