oqct-app/main/default/objects/Record_Type_Field__c/fields/Master_Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Master_Object_Name__c</fullName>
    <description>The name ‘Master Object’ record associated with the ‘Record Type &amp; Field’ record</description>
    <formula>DC_Configuration__r.Master_Object_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The name ‘Master Object’ record associated with the ‘Record Type &amp; Field’ record</inlineHelpText>
    <label>Master Object Name</label>
    <type>Text</type>
</CustomField>