oqct-app/main/default/objects/Record_Type_Field__c/fields/Record_Type_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If &apos;true&apos;, the records under the record type will be masked, otherwise not</description>
    <inlineHelpText>If &apos;true&apos;, the records under the record type will be masked, otherwise not</inlineHelpText>
    <label>Record Type Enabled</label>
    <type>Checkbox</type>
</CustomField>