oqct-app/main/default/objects/Record_Type_Field__c/fields/Record_Type_Id__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_Id__c</fullName>
    <description>The id of the record type to watch for when masking records of the object represented by master/related object</description>
    <inlineHelpText>The id of the record type to watch for when masking records of the object represented by master/related object</inlineHelpText>
    <label>Record Type Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>