oqct-app/main/default/objects/Record_Type_Field__c/fields/Record_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_Name__c</fullName>
    <description>The name of the record type on the object represented by master/related object for which the fields needs to be masked</description>
    <inlineHelpText>The name of the record type on the object represented by master/related object for which the fields needs to be masked</inlineHelpText>
    <label>Record Type Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>