oqct-app/main/default/objects/Record_Type_Field__c/fields/Related_Object__c.field-meta.xml
<CustomField>
    <fullName>Related_Object__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The ‘Related Object’ record associated with the ‘Record Type &amp; Field’ record. If it is empty, the record type and fields correspond to the Master object instead</description>
    <inlineHelpText>The ‘Related Object’ record associated with the ‘Record Type &amp; Field’ record. If it is empty, the record type and fields correspond to the Master object instead</inlineHelpText>
    <label>Related Object</label>
    <referenceTo>Related_Object__c</referenceTo>
    <relationshipName>Record_Types_Fields</relationshipName>
    <type>Lookup</type>
</CustomField>