oqct-app/main/default/objects/Record_Type_Field__c/fields/Related_Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Related_Object_Name__c</fullName>
    <description>The name of  ‘Related Object’ associated with the ‘Record Type &amp; Field’ record which will be any of the child objects of the Master object which needs to be masked/deleted</description>
    <formula>Related_Object__r.Related_Object_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The name of  ‘Related Object’ associated with the ‘Record Type &amp; Field’ record which will be any of the child objects of the Master object which needs to be masked/deleted</inlineHelpText>
    <label>Related Object Name</label>
    <type>Text</type>
</CustomField>